--- a/MainDataSource.yml
+++ b/MainDataSource.yml
@@ -246,6 +246,8 @@
         EmailBouncedReason:
           fake.text:
             max_nb_chars: 100
+          AccountId:
+            Reference: Account
 #Opportunity
       friends:
         - object: Opportunity
