--- a/Product.yml
+++ b/Product.yml
@@ -1,30 +1,25 @@
-- plugin: faker_microservice.Provider
 - include_file: Pricebook.yml
 - object: Product2
   count: 50
   fields:
     Name: 
-      fake:
-          microservice
-    IsActive:
-      Value: True
+      fake: first_name
+    IsActive: True
     ProductCode:
       fake: swift11
     Description:
       fake: catch_phrase
-    friends:
-      - object: PricebookEntry
-        fields:
-          IsActive:
-            Value: True
-          PriceBook2Id:
-            Reference: PriceBook2
-          Product2Id:
-            Reference: Product2
-          UnitPrice:
-            random_number:
-              min: 100
-              max: 1500
+  friends:
+    - object: PricebookEntry
+      fields:
+        IsActive: True
+        PriceBook2Id: 01s4L000000YSdAQAW
+        Product2Id:
+          reference: Product2
+        UnitPrice:
+          random_number:
+            min: 100
+            max: 1500
           
 
 
